The current version of Ruby Reports is 0.4.21

changes since 0.4.19

- acts_as_reportable converted to use Data::Table

- Data::Record's constructor can now take a hash

- Added initial Data::Set implementation

- Added smart Data::Table.to_format method_missing functionality

changes since 0.4.17

- Made method_missing a lot more friendly all around.

- Made minor interface changes.

- Data::Table and Data::Record now dup correctly

- Fixed some serious issues between Data::Table and TextPlugin

- Report#eval_template now returns an ERb string instead of printing to STDOUT

- Added Data::Table#split which allows basic grouping operations

- Added Report#load_csv convenience method 

- Tightened up Data::Table#<< to ensure column_names match record attributes

- Fixed appending a Record in Data::Table#<<

changes since 0.4.15

- Fixed a packaging bug

changes since 0.4.13

- Began building a new data handling system, which is much faster than
  DataSet/DataRow and takes up less memory.  It is also very young, though.
  (See Data::Table and Data::Record)

- Added init_plugin hooks

- Added DataSet#rename_columns

- Added taggable mixin

- Added an options accessor to help solve ticket #8

- Alioth now has a powerful hook back into the engine from plugins via helpers

- added action / attribute methods for format engine / plugin via MetaTools

- added accessor style methods to DataRow via method_missing

- added prune method for Table formatting. 

changes since 0.4.11

- Added high level hook Report#text_processor which essentially works like
  Format.register_filter

- Report can now run single or multiple reports and do things such as send them
  via email or write/append them to files.

- Report has been overhauled to have a simple DSL

- Mailfactory is now a gem dependency.  If you install via setup.rb or building
  the gem yourself, you only need it if you plan to use Ruport::Mailer
